# willka-project

./: .gitignore  AGENTS.md  README.md  README_EN.md  config.example.toml  install.sh  main.py  pyproject.toml  test_basic.py  test_complete_mock.py  test_pipeline_mock.py
.opencode/plans/: implementacion_willka.md
data/test_complete/midi/: bass.mid  drums.mid  guitar.mid  other.mid  piano.mid
data/test_complete/output/musicxml/: partitura_prueba.xml
docs/: SDD_pipeline_transcripcion_musical.md  modernization_summary.md
src/willka/: __init__.py  cli.py  config.py  exceptions.py  exporter.py  pipeline.py  score_builder.py  stem_separator.py  transcriber.py
tests/: test_basic.py  test_complete_mock.py  test_pipeline_mock.py
